tests/sema/bad/21_unary_plus_str.sg
fn main() {
  let s:string = "hi";
  let x:int = +s;
}
